--- a/src/scss/scss.scss
+++ b/src/scss/scss.scss
@@ -64,8 +64,9 @@ main{
 	background: white;
 	z-index: 10;
 	transition: opacity .5s ease;
-	input{
+	input[type="number"]{
 		padding: 1rem;
+		margin-bottom: 1rem;
 	}
 	&.start{
 		opacity: 0;
@@ -77,9 +78,11 @@ main{
 		justify-content: center;
 	}
 }
-#start{
-	cursor: pointer;
+button{
+	font-size: 1.5rem;
 	padding: .5rem 3rem;
+	background: white;
+	cursor: pointer;
 	border: 1px solid lightslategray;
 	transition: background .25s ease;
 	&:hover{
@@ -103,14 +106,6 @@ main{
 	&.active{
 		z-index: 5;
 		opacity: 1;
-	}
-	button{
-		font-size: 1.5rem;
-		padding: .5rem 3rem;
-		background: white;
-		&:hover{
-			background: lightgray;
-		}
 	}
 }
 .player{
