--- a/index.pug
+++ b/index.pug
@@ -7,7 +7,7 @@ html
 
 		title TIC-TAC-TOE by AlexanderMarginal
 
-		link(rel="stylesheet" href="assets/css/main.css")
+		link(rel="stylesheet" href="main.css")
 
 		body
 			main
@@ -33,4 +33,4 @@ html
 					#p2.player__item="Игрок 1 - "
 						span
 
-			script(src="assets/js/main.js")
+			script(src="main.js")
