--- a/index.pug
+++ b/index.pug
@@ -8,6 +8,7 @@ html
 		title TIC-TAC-TOE by AlexanderMarginal
 
 		link(rel="stylesheet" href="main.css")
+		link(rel="icon" type="image/png" href="icon.png")
 
 		body
 			main
